--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ main p {
 
 .skill-container img {
   width: 250px;
-  height: 100px;
+  height: 150px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
 }
@@ -143,7 +143,7 @@ main p {
 
 .java-right img {
   width: 250px;
-  height: auto;
+  height: 150px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
 }
@@ -176,18 +176,18 @@ main p {
 }
 .web-left img {
   width: 250px;
-  height: auto;
+  height: 150px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
 }
 
 .web-container h1 {
   font-size: 40px;
-  text-align: center;
   color: #fff;
 }
 .web-container h2 {
   font-size: 20px;
+  text-align: justify;
   color: #fff;
   margin: 20px 0;
 }
@@ -209,7 +209,7 @@ main p {
 
 .port-right img {
   width: 250px;
-  height: auto;
+  height: 150px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
 }
@@ -220,7 +220,7 @@ main p {
 }
 .port-left h2 {
   font-size: 20px;
-  text-align: center;
+  text-align: justify;
   color: #fff;
 }
 
@@ -239,9 +239,10 @@ main p {
   text-align: center;
   color: #fff;
 }
+
 .achievements-right img {
   width: 250px;
-  height: auto;
+  height: 150px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
 }
