--- a/style.css
+++ b/style.css
@@ -113,18 +113,18 @@ main p {
 
 .skill-container img {
   width: 250px;
-  height: 150px;
+  height: 100px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
 }
 
 .skill-container h1 {
-  font-size: 40px;
+  font-size: 30px;
   text-align: center;
   color: #fff;
 }
 .skill-container h2 {
-  font-size: 20px;
+  font-size: 15px;
   text-align: justify;
   color: #fff;
   margin: 20px 0;
@@ -149,18 +149,18 @@ main p {
 }
 
 .java-container h1 {
-  font-size: 40px;
+  font-size: 30px;
   text-align: center;
   color: #fff;
 }
 .java-container h2 {
-  font-size: 20px;
+  font-size: 15px;
   text-align: justify;
   color: #fff;
   margin: 20px 0;
 }
 .java-container h3 {
-  font-size: 15px;
+  font-size: 10px;
   color: #fff;
   margin: 20px 0;
 }
@@ -168,6 +168,7 @@ main p {
 .web-container {
   margin-top: 50px;
   display: flex;
+  flex-direction: row-reverse;
   justify-content: space-around;
   align-items: center;
   background-color: #3a3a3a;
@@ -175,24 +176,24 @@ main p {
   box-shadow: 0 4px 8px rgba(5, 5, 5, 1.5);
 }
 .web-left img {
-  width: 250px;
-  height: 150px;
+  width: 200px;
+  height: 120px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
 }
 
 .web-container h1 {
-  font-size: 40px;
+  font-size: 30px;
   color: #fff;
 }
 .web-container h2 {
-  font-size: 20px;
+  font-size: 15px;
   text-align: justify;
   color: #fff;
   margin: 20px 0;
 }
 .web-container h3 {
-  font-size: 15px;
+  font-size: 10px;
   color: #fff;
   margin: 20px 0;
 }
@@ -208,18 +209,18 @@ main p {
 }
 
 .port-right img {
-  width: 250px;
-  height: 150px;
+  width: 200px;
+  height: 120px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
 }
 .port-left h1 {
-  font-size: 40px;
+  font-size: 30px;
   text-align: center;
   color: #fff;
 }
 .port-left h2 {
-  font-size: 20px;
+  font-size: 15px;
   text-align: justify;
   color: #fff;
 }
@@ -235,7 +236,7 @@ main p {
   box-shadow: 0 4px 8px rgba(5, 5, 5, 1.5);
 }
 .achievements-left h1 {
-  font-size: 40px;
+  font-size: 35px;
   text-align: center;
   color: #fff;
 }
@@ -258,7 +259,7 @@ main p {
   }
 
   .achievements-right {
-    width: 50%;
+    width: 40%;
   }
 }
 
