--- a/style.css
+++ b/style.css
@@ -41,6 +41,34 @@ li a:hover::after {
   width: 100%;
 }
 
+.hamburger {
+  display: none;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  ul {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: #fff;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    padding: 10px 0;
+  }
+
+  ul.active {
+    display: flex;
+  }
+
+  .hamburger {
+    display: block;
+  }
+}
+
 main {
   display: flex;
   flex-wrap: wrap;
@@ -259,7 +287,7 @@ main p {
   }
 
   .achievements-right {
-    width: 40%;
+    width: 55%;
   }
 }
 
