--- a/style.css
+++ b/style.css
@@ -10,10 +10,24 @@ body {
 
 header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-color: white;
   z-index: 10;
+  padding: 10px 20px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+main {
+  margin-top: 70px; /* To account for the fixed header */
+}
+
+nav {
+  display: flex;
+  align-items: center;
 }
 
 ul {
@@ -47,13 +61,13 @@ li a:hover::after {
   cursor: pointer;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
   ul {
     display: none;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-color: #fff;
+    background-color: white;
     position: absolute;
     top: 60px;
     left: 0;
@@ -68,7 +82,6 @@ li a:hover::after {
     display: block;
   }
 }
-
 main {
   display: flex;
   flex-wrap: wrap;
