--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ main p {
     flex-direction: column;
   }
   .skill-container img {
-    width: 50%;
+    width: 70px;
   }
 
   .achievements-right {
