--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ main p {
   margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   background-color: #3a3a3a;
   border-radius: 25px;
@@ -154,7 +154,7 @@ main p {
 }
 
 .skill-container img {
-  width: 150px;
+  width: 120px;
   height: 100px;
   margin: 20px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
@@ -243,7 +243,7 @@ main p {
 .port-container {
   margin-top: 50px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   background-color: #3a3a3a;
   border-radius: 25px;
@@ -284,7 +284,7 @@ main p {
 }
 
 .achievements-right img {
-  width: 250px;
+  width: 120px;
   height: 150px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
