--- a/style.css
+++ b/style.css
@@ -269,6 +269,7 @@ main p {
 .achievements-container {
   margin-top: 50px;
   display: flex;
+  flex-wrap: nowrap;
   justify-content: space-around;
   align-items: center;
   background-color: #3a3a3a;
@@ -282,7 +283,7 @@ main p {
 }
 
 .achievements-right img {
-  width: 250px;
+  width: 200px;
   height: 150px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
