--- a/style.css
+++ b/style.css
@@ -299,8 +299,11 @@ main p {
     text-align: center;
   }
 }
+.achievements-right img {
+  align-items: center;
+}
 
-@media (max-width: 480px) {
+@media (max-width: 580px) {
   .content-left {
     padding: 5px;
   }
