--- a/style.css
+++ b/style.css
@@ -256,6 +256,7 @@ main p {
 .achievements-container {
   margin-top: 50px;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
@@ -266,13 +267,13 @@ main p {
 
 .achievements-container img {
   width: 250px;
-  height: 100px;
+  height: 80px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
 }
 
 .achievements-container h1 {
-  font-size: 30px;
+  font-size: 20px;
   text-align: center;
   color: #fff;
 }
