--- a/style.css
+++ b/style.css
@@ -256,8 +256,6 @@ main p {
 .achievements-container {
   margin-top: 50px;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   background-color: #3a3a3a;
@@ -266,14 +264,14 @@ main p {
 }
 
 .achievements-container img {
-  width: 150px;
+  width: 200px;
   height: 100px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
 }
 
 .achievements-container h1 {
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
   color: #fff;
 }
@@ -287,6 +285,10 @@ main p {
     padding-top: 20px;
     text-align: center;
   }
+}
+.achievements-container {
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (max-width: 480px) {
