--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ main {
   border-radius: 90%;
 }
 .content-left {
-  width: 30%;
+  width: 40%;
   padding: 10px;
 }
 
@@ -288,7 +288,7 @@ main p {
 }
 .achievements-container {
   flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
 }
 
 @media (max-width: 480px) {
