--- a/style.css
+++ b/style.css
@@ -289,6 +289,7 @@ main p {
 .achievements-container {
   flex-direction: column;
   flex-wrap: wrap;
+  width: 50%;
 }
 
 @media (max-width: 480px) {
