--- a/style.css
+++ b/style.css
@@ -289,7 +289,8 @@ main p {
 .achievements-container {
   flex-direction: column;
   flex-wrap: wrap;
-  width: 50%;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 480px) {
