--- a/style.css
+++ b/style.css
@@ -10,10 +10,24 @@ body {
 
 header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-color: white;
   z-index: 10;
+  padding: 10px 20px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+main {
+  margin-top: 70px; /* To account for the fixed header */
+}
+
+nav {
+  display: flex;
+  align-items: center;
 }
 
 ul {
@@ -51,7 +65,6 @@ li a:hover::after {
   ul {
     display: none;
     flex-direction: column;
-    align-items: center;
     width: 100%;
     background-color: white;
     position: absolute;
@@ -68,7 +81,6 @@ li a:hover::after {
     display: block;
   }
 }
-
 main {
   display: flex;
   flex-wrap: wrap;
@@ -287,10 +299,8 @@ main p {
   }
 }
 .achievements-container {
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
 }
 
 @media (max-width: 480px) {
