--- a/style.css
+++ b/style.css
@@ -268,7 +268,8 @@ main p {
 .achievements-container {
   margin-top: 50px;
   display: flex;
-  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   background-color: #3a3a3a;
@@ -276,16 +277,16 @@ main p {
   box-shadow: 0 4px 8px rgba(5, 5, 5, 1.5);
 }
 
-.achievements-right img {
+.achievements-container img {
   width: 200px;
-  height: 150px;
+  height: 100px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.938);
 }
 
-.achievements-left h1 {
-  font-size: 20px;
-  text-align: justify;
+.achievements-container h1 {
+  font-size: 30px;
+  text-align: center;
   color: #fff;
 }
 
@@ -298,9 +299,6 @@ main p {
     padding-top: 20px;
     text-align: center;
   }
-}
-.achievements-right {
-  width: 100%;
 }
 
 @media (max-width: 480px) {
