--- a/style.css
+++ b/style.css
@@ -290,6 +290,64 @@ main p {
   color: #fff;
 }
 
+footer {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #3a3a3a;
+  border-radius: 25px;
+  box-shadow: 0 4px 8px rgba(5, 5, 5, 1.5);
+}
+footer h1 {
+  font-size: 30px;
+  color: #fff;
+}
+footer h2 {
+  font-size: 30px;
+  color: #fff;
+}
+
+footer img {
+  width: 30px;
+  height: auto;
+  margin: 10px;
+}
+
+.resume {
+  margin-top: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.resume img {
+  width: 50%;
+}
+
+.back {
+  padding: 15px 30px;
+  background-color: #fff;
+  color: #3a3a3a;
+  outline: none;
+  border: none;
+  font-size: large;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(14, 13, 13, 0.938);
+}
+
+.back::after {
+  content: "";
+  display: block;
+  height: 4px;
+  width: 0;
+  background-color: tomato;
+  transition: width 0.5s;
+}
+
+.back:hover::after {
+  width: 100%;
+}
 @media (max-width: 768px) {
   .content-left {
     width: 100%;
@@ -298,9 +356,6 @@ main p {
   h2 {
     padding-top: 20px;
     text-align: center;
-  }
-  .achievements-right {
-    width: 50%;
   }
 }
 
